# ubunix

./: Justfile  README.md  pyproject.toml
ubunix/: __init__.py  __main__.py  apt.py  constants.py  flatpak.py  guix.py  nix.py  parser.py  utils.py
